--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,6 +46,7 @@ section {
   flex-direction: column;
 
   font-size: 10vw;
+  letter-spacing: 1vw;
   text-transform: uppercase;
   text-shadow: 0.1vw 0.1vw 0.3vw black;
   color: white;
@@ -99,7 +100,6 @@ button {
   color: #fff;
   overflow: hidden;
   box-shadow: 0 0 0 0 transparent;
-
 
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -168,7 +168,6 @@ button:active {
 
 /* Schermata dopo l'inserimento della città */
 
-
 /* Titolo Città */
 
 .city-header {
@@ -225,7 +224,6 @@ button:active {
   font-weight: normal;
   color: white;
 }
-
 
 /* Tabella City Score */
 
